# otawa-xilinx

./: A9CycleTiming.h  CMakeLists.txt  DEV  R5CycleTiming.h  README.md  XilinxR5BBTime.cpp  arm_properties.h  cortexr5.cpp  hook.cpp  otawa_A9Time.nmp  otawa_A9Time.tpl  otawa_R5Time.nmp  otawa_R5Time.tpl  otawa_operand.nmp  otawa_operand.tpl  otawa_time.nmp  otawa_time.tpl  preFetchAnalysis.cpp  timing.h  xilinx-zcu-712_a53.osx  xilinx-zcu-712_r5f.osx  xilinx-zynq-7000.osx  xilinx.eld  xilinx.osx  xilinxA9BBTime.cpp  xilinxR5.eld  xilinxR5.osx  xilinxR5BBTime.cpp  xilinx_r5.osx
Xilinx/: bht_a53.xml  bht_r5f.xml  cache_a53.xml  cache_a9.xml  cache_r5f.xml  memory_a9.xml  memory_r5f.xml  pipeline_a9.xml  pipeline_r5f.xml
archs/xilinx/: README.md  xilinx-zcu-712_a53.osx  xilinx-zcu-712_r5f.osx  xilinx-zynq-7000.osx
archs/xilinx-zynq-7000/: xilinx.osx
archs/xilinx-zynq-7000/zynq-7000/: bht.xml  memory.xml  pipeline.xml
archs/xilinx/zynq/: bht_a53.xml  cache_r5f.xml  pipeline_a53.xml  pipeline_a9.xml  pipeline_r5f.xml
test/: README  allButOne2
zynq/: bht_a9.xml  cache_a53.xml  cache_a9.xml  cache_r5f.xml  memory.xml  memory_r5f.xml  pipeline_a53.xml  pipeline_a9.xml  pipeline_r5f.xml
